<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black_background"
    tools:context=".view.HomeMyMoodsFrag">

    <!-- RecyclerView for the mood list -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerview_HomeMyMoodsFragment_userrecyclerview"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Container for filter controls -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingBottom="8dp"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">



        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/dropDownMenuLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:hint="@string/filter_by_mood"
            android:textColorHint="@color/grey"

            app:boxStrokeColor="@color/selector"
            app:hintTextColor="@color/selector"
            app:cursorColor="@color/selector"

            android:paddingTop="0dp"
            android:paddingBottom="0dp"
            app:boxStrokeWidth="2dp"
            app:endIconTint="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">


            <com.google.android.material.textfield.MaterialAutoCompleteTextView
                android:id="@+id/autoCompleteTextView"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:paddingStart="16dp"
                android:paddingLeft="16dp"
                android:dropDownHeight="wrap_content"
                android:dropDownVerticalOffset="8dp"
                android:padding="2dp"
                android:popupBackground="@color/white"
                android:popupElevation="6dp"
                android:textColor="@color/white"
                android:textSize="16sp"
                app:boxStrokeWidth="5dp" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/search_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"

            app:boxStrokeColor="@color/selector"
            app:hintTextColor="@color/selector"
            app:cursorColor="@color/selector"

            android:hint="@string/search_moods"
            android:textColorHint="@color/grey"
            app:boxStrokeWidth="2dp"
            app:endIconTint="@color/grey_button"
            app:endIconMode="clear_text"
            app:layout_constraintTop_toBottomOf="@id/dropDownMenuLayout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">



            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/search_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionSearch"
                android:inputType="text"
                android:textColor="@color/white"
                android:textSize="16sp"
                app:boxStrokeColor="@android:color/white" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.checkbox.MaterialCheckBox
            android:id="@+id/checkBox_HomeMyMoodsFragment_recentWeek"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/recent_week"
            android:textColor="@color/mimi_pink"
            android:buttonTint="@color/mimi_pink"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@id/search_layout"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- Top header area -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout3"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:background="@color/primary_dark_grape"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/textView_HomeMyMoodsFragment_welcomeUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="@string/welcome_username_home_moods"
            android:textColor="@color/mimi_pink"
            android:textSize="20sp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/ImageView_HomeMyMoodsFragment_userProfile"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_margin="16dp"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/ic_profile"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButton_HomeMyMoodsFragment_addmood"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:backgroundTint="@color/primary_dark_grape"
        app:tint="@color/white"
        app:srcCompat="@drawable/ic_add"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>

