<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_user_login_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.UserLoginFrag"
    android:background="@color/black_background"
    >



    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/textView_UserLoginInFrag_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user_login"
        android:textColor="@color/mimi_pink"
        android:layout_marginTop="150dp"
        app:layout_constraintEnd_toEndOf="@+id/textField_userLoginFrag_username"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/textField_userLoginFrag_username"
        app:layout_constraintTop_toBottomOf="@+id/ImageView_LoginUserSelection_appTitle" />
    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/ImageView_LoginUserSelection_appTitle"
        android:layout_width="300dp"
        android:layout_height="200dp"
        android:layout_marginTop="80dp"
        android:scaleType="centerCrop"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_moods_title" />


    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/button_UserLoginFrag_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="32dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/ic_white_back_button" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_UserLogin_SignIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/primary_dark_grape"
        android:text="@string/sign_in_user"
        android:textColor="@color/mimi_pink"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textField_userLoginFrag_password"
        />


    <!-- back button above -->
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/textButton_UserLoginFrag_signUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/sign_up_user"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_UserLoginFrag_question" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/textView_UserLoginFrag_question"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/don_t_have_an_account"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_UserLogin_SignIn" />

    <!-- Input username -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textField_userLoginFrag_username"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:hint="@string/username_user_login"

        app:boxStrokeColor="@color/selector"
        app:hintTextColor="@color/selector"
        app:cursorColor="@color/selector"

        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_UserLoginInFrag_title"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editText_userLoginFrag_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:ems="10"
            android:inputType="text"
            android:textColor="@color/white"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Input password-->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textField_userLoginFrag_password"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:hint="@string/password_user_login"

        app:boxStrokeColor="@color/selector"
        app:hintTextColor="@color/selector"
        app:cursorColor="@color/selector"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textField_userLoginFrag_username"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editText_userLoginFrag_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:textColor="@color/white"
            />
    </com.google.android.material.textfield.TextInputLayout>




</androidx.constraintlayout.widget.ConstraintLayout>