...

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_moods_title" />

    <Button
        android:id="@+id/button_LoginUserSelectionFragment_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user_user_select"
        android:textColor="@color/mimi_pink"
        android:backgroundTint="@color/primary_dark_grape"
        app:layout_constraintBottom_toBottomOf="parent"
...
